--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ youtube_dl
 ffmpeg-python
 python-dotenv
 youtube_search
-py-tgcalls==0.8.0
+py-tgcalls==0.8.1rc1
 youtube_search_python
 wrapt_timeout_decorator
 git+https://github.com/pyrogram/pyrogram@master
